tests/valid/CoCoFunctionNotUnique.nestml
/**
 *
 *  CoCoFunctionNotUnique.nestml
 *
 *  This file is part of NEST.
 *
 *  Copyright (C) 2004 The NEST Initiative
 *
 *  NEST is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  NEST is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with NEST.  If not, see <http://www.gnu.org/licenses/>.
 *
 *
 * This model is used to test if broken CoCos are identified correctly. Here, if redeclaration of predefined functions
 * is detected.
 * Positive Case.
*/

neuron CoCoFunctionNotUnique:
    function deltaNew(Tau_a ms,Tau_b ms) real: # deltaNew is not predefined, thus everything is correct
        test real = 1
        return test # correctly type return type is given
    end

    function deltaBoolean(Tau_a ms,Tau_b ms) boolean:
        test real = 1
        return True
    end

    function deltaNoReturn(Tau_a ms,Tau_b ms) boolean:
        test real = 1
        if True == True:
           return True
        else:
           return False
        end
        # all branches of the final statement have a return statement, thus everything is correct
    end
end
